Fix swagger path
